Fixed menu showing on article view on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -12,7 +12,7 @@
     }
     article {
         width: 100%;
-        height: 200%;
+        height: auto;
         margin: 0;
         padding: 15px;
         position: absolute;
